src/math_ops/snapshots/rbx_types_ops__math_ops__vec3int16__vec3int16_add_vec3int16.snap
---
source: src/math_ops/vec3int16.rs
expression: "Vector3int16::new(15, 15, 15).add(&Vector3int16::new(5, 10, 5).into())"
---
Vector3int16:
  - 20
  - 25
  - 20
