src/math_ops/snapshots/rbx_types_ops__math_ops__vec3int16__vec3int16_div_f32.snap
---
source: src/math_ops/vec3int16.rs
expression: "Vector3int16::new(15, 15, 15).div(&5f32.into())"
---
Vector3int16:
  - 3
  - 3
  - 3
