src/math_ops/snapshots/rbx_types_ops__math_ops__vec3int16__vec3int16_div_vec3.snap
---
source: src/math_ops/vec3int16.rs
expression: "Vector3int16::new(15, 15, 15).div(&Vector3::new(5.0, 10.0, 5.0).into())"
---
Vector3int16:
  - 3
  - 1
  - 3
