src/math_ops/snapshots/rbx_types_ops__math_ops__vec3int16__vec3int16_modulus_f32.snap
---
source: src/math_ops/vec3int16.rs
expression: "Vector3int16::new(15, 15, 15).modulus(&5f32.into())"
---
Vector3int16:
  - 0
  - 0
  - 0
