src/math_ops/snapshots/rbx_types_ops__math_ops__vec3int16__vec3int16_modulus_vec3int16.snap
---
source: src/math_ops/vec3int16.rs
expression: "Vector3int16::new(15, 15, 15).modulus(&Vector3int16::new(5, 10, 5).into())"
---
Vector3int16:
  - 0
  - 5
  - 0
